--- a/src/Mods.ToDoCompanion/Mods.ToDoCompanion.csproj
+++ b/src/Mods.ToDoCompanion/Mods.ToDoCompanion.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <AssemblyName>StardewCompanions.Mods.ToDoCompanion</AssemblyName>
-        <RootNamespace>StardewCompanions.Mods.ToDoCompanion</RootNamespace>
+        <TargetFramework>net6.0</TargetFramework>
+        <AssemblyName>StardewCompanion.Mods.ToDoCompanion</AssemblyName>
+        <RootNamespace>StardewCompanion.Mods.ToDoCompanion</RootNamespace>
         <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>disable</Nullable>
     </PropertyGroup>
